--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
+    "loopback-connector-mysql": "^5.4.2",
     "loopback-connector-oracle": "^3.2.0",
     "oracledb": "^3.1.2",
     "serve-favicon": "^2.0.1",
